# osm-email-to-gsuite

./: .env.example  .gcloudignore  .gitignore  CONFIG_MANAGEMENT.md  DEPLOYMENT.md  Dockerfile  NEXT_STEPS.md  POETRY_MIGRATION.md  README.md  app.py  config.yaml.example  config_manager.py  email_config.yaml.backup  oms.py  oms_to_gsuite.py  osm_config.yaml.example  pyproject.toml  requirements.txt  restore_groups.py  snapshot_groups.py  sync_api.py  sync_oo.py  test-scheduler-alert.ps1  test-scheduler-alert.sh
.github/: copilot-instructions.md
.streamlit/: config.toml
config/: email_config.yaml.example  google_config.yaml.example
deployment/: Dockerfile  Dockerfile.api  Dockerfile.app  app.yaml  start.sh
docs/: CLOUD_SCHEDULER.md  COST_OPTIMIZATION.md  DEPLOYMENT.md  EMAIL_NOTIFICATIONS.md  LOG_BASED_ALERTS.md  MIGRATION.md  OAUTH_SETUP.md  POETRY.md  SECURITY.md  SECURITY_VERIFICATION.md  TEST_CONFIG_UI.md
gsuite_sync/: gam_groups.py  groups_api.py
logs/: .gitignore
osm_api/: models.py  osm_calls.py
output/: readme.txt
scripts/: cleanup-gcp-resources.ps1  restore_groups.py  setup_cloud_config.py  snapshot_groups.py
scripts/legacy/: oms_to_gsuite.py  osm_to_csv.py  osm_to_csv_history.py
src/: __init__.py  api.py  app.py  auth.py  auth_page.py  config_manager.py  email_notifier.py  main.py  sync_api.py  sync_logger.py  version.py
src/gsuite_sync/: groups_api.py
tests/: check_member_emails.py  debug_luke.py  debug_luke_full.py  debug_members.py  test_config_management.py  test_email_notifications.py  test_leader_emails.py  test_luke_emails.py
(+2 files in other folders)
